@@ -24,6 +24,6 @@ DIST icu4c-4_4-docs.zip 4743886 RMD160 6321fdc500d018358578249d32e84cfdc3f17db7 
 DIST icu4c-4_4_1-src.tgz 15373744 RMD160 dae3634f7a1f9ce78e0b36c49503e5d3c43ebdc5 SHA1 0d011f7e1e042ec8e8833ac910056021d0924d91 SHA256 34994fc183da20a6572bbab56b0dc85d372ec3e574fffb5d571a0da95f723063
 EBUILD icu-4.0.1.ebuild 3333 RMD160 82f6cdce68dfc15be9d2c8860c5e10aa5fde258d SHA1 81a4618e60469a5e8fc6d4bd35ce617d841190be SHA256 fa082c94f9d4dc4ead0dacd25a72627ecece97ca26bd52f316871300d50c9bdc
 EBUILD icu-4.2.1.ebuild 2958 RMD160 10d4d701438a6807f60e8796f2431e3188b6ea0e SHA1 f2478acb35c045db241a113007458d9270b4a62c SHA256 602e2c6d4d962c14b1b829272df4b360c47770a5edd9575a55c5371b688cfff7
-EBUILD icu-4.4.1.ebuild 2962 RMD160 6b6f5736635b44801735d26bd399246e874e8c55 SHA1 9c12bbbd005291a1430c68c0b7ddd5a887561226 SHA256 b32df4793de49199f6ddce14a8c531be31ca59995714fea8c66d2ec5777a53ee
-MISC ChangeLog 14439 RMD160 da2a36b7dafa135f53792031554fe9ec3f789512 SHA1 c9d2aa9e8aeebf5f6fd40b326b9d712096fe96b8 SHA256 53b048799cad172ad421bacfe1632bfb113c337a7f2cc32e32fbf2ebab6dc486
-MISC metadata.xml 274 RMD160 c5ce174bf40a37d632d003bab5e2c5b97777a1c6 SHA1 ccf8f018b8d3a49a1557b5f77e29802cbbc6140d SHA256 b2c70fe9d0595a367c5d41793662a02d301f77b09b6dc70f5b675c2725419a6a
+EBUILD icu-4.4.1.ebuild 2961 RMD160 b02de19f064e7ced4bda8f62ef1235cfe8c0c70e SHA1 35501639808a2e59b01cdd153b0907dc462b1ef9 SHA256 4b2f73f83bd3e20ec3971494b95afd19cd80902113a2787cdfb5b28870e9320f
+MISC ChangeLog 14716 RMD160 f5ecc070ef48a138a01a17316aab03d4a632debb SHA1 3d5a24e953a8e0c085b6889a2f45f1e612444566 SHA256 88d38b1af5a5e8e4ca41e12587d9741d0838904253fd62dbd25de6c470612204
+MISC metadata.xml 157 RMD160 a98db3a086fae3c09a903dadbc05f60443ec4b1a SHA1 ddaa23cc35eb917bf8962b652442bebb1ce0f440 SHA256 54f8878ca0228e380abbaa4b529806b5533a6b9b51b3b16c0909e906586a91a1
