@@ -1,6 +1,15 @@
 # ChangeLog for dev-libs/icu
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.116 2010/07/25 14:52:35 klausman Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/icu/ChangeLog,v 1.119 2010/08/19 16:57:23 jer Exp $
+
+  19 Aug 2010; Jeroen Roovers <jer@gentoo.org> metadata.xml:
+  Remove arfrever.
+
+  08 Aug 2010; Raúl Porcel <armin76@gentoo.org> icu-4.4.1.ebuild:
+  ia64/s390/sh/sparc stable wrt #322297
+
+  05 Aug 2010; Markus Meier <maekke@gentoo.org> icu-4.4.1.ebuild:
+  arm stable, bug #322297
 
   25 Jul 2010; Tobias Klausmann <klausman@gentoo.org> icu-4.4.1.ebuild:
   Stable on alpha, bug #322297
